@@ -32,17 +32,7 @@
 // headers
 // ----------------------------------------------------------------------------
 
-#include "wx/wxprec.h"
-
-#ifdef __BORLANDC__
-   #pragma hdrstop
-#endif
-
-// for all others, include the necessary headers (this file is usually all you
-// need because it includes almost all "standard" wxWindows headers)
-#ifndef WX_PRECOMP
-   #include "wx/wx.h"
-#endif
+#include <wx/wxprec.h>
 
 #include "wxbmainframe.h"
 
