@@ -1,3 +1,6 @@
+25-04-2005 :
+ - Fixes to make wx-console compatible with wxWidgets 2.6.0.
+
 24-03-2005 :
  - wxbMainFrame : Fix a bug with GTK+-1.2 which caused wx-console to crash
    when starting.
